# moneyplot

./: .gitignore  README.md  pyproject.toml
src/moneyplot/dashboard/: app.py
src/moneyplot/dashboard/pages/: 01_carte.py  02_evolution.py  03_compare.py
src/moneyplot/ingestion/: dpe.py  dvf.py  ecb.py  insee.py
src/moneyplot/pipelines/: assets.py  definitions.py  resources.py  schedules.py  workspace.yaml
src/moneyplot/storage/: db.py  schemas.py
src/moneyplot/transform/: dvf_clean.py  enrich.py
