[project]
name = "moneyplot"
version = "0.1.0"
description = "Plateforme de suivi des prix immobiliers en France"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Storage
    "duckdb>=1.1",
    # Orchestration
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    # Dashboard
    "streamlit>=1.40",
    "plotly>=5.24",
    "pydeck>=0.9",
    "folium>=0.18",
    "streamlit-folium>=0.23",
    # Data
    "pandas>=2.2",
    "pyarrow>=18.0",
    "requests>=2.32",
    "httpx>=0.28",
    # Macro data
    "pynsee>=0.2",
    # Geo
    "geopandas>=1.0",
    # Utils
    "python-dotenv>=1.0",
    "tqdm>=4.67",
]

[project.scripts]
moneyplot-dashboard = "moneyplot.dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moneyplot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
